--- a/style.css
+++ b/style.css
@@ -73,14 +73,28 @@ a {
 }
 
 .text-container {
-    background-color: greenyellow;
     display: flex;
     justify-content: center;
+    width: 578px;
+    margin: 0 auto;
+    padding-top: 1.5rem;
 }
 
+.btn2 {
+    text-decoration: none;
+    background-color: #f2f2f2;
+    border: none;
+    padding: .7rem 1rem;
+    border-radius: 4px;
+    margin-left: .8rem;
+    color: #5F6368;
+    font-size: 14px;
+}
+
+
 .search-img {
-    width: 20px;
-    height: 20px;
+    width: 1rem;
+    height: 1rem;
     margin: 0 .9rem;
 }
 
